Fixes minor layout issues in IE9

--- a/_sass/global.scss
+++ b/_sass/global.scss
@@ -19,6 +19,7 @@ body {
   font-family: $font-family;
   font-weight: 400;
   line-height:1.6;
+  overflow-x: hidden;
   padding: .5rem;
 }
 
