--- a/_sass/syntax.scss
+++ b/_sass/syntax.scss
@@ -5,6 +5,7 @@ figure.highlight {
   background-color: #EEEEE9;
   border-radius: 5px;
   margin-bottom: 1.5rem;
+  -ms-overflow-style: -ms-autohiding-scrollbar;
   overflow-x: scroll;
   padding: .5em 1em;
 
